Make the navigator object readonly, since that's what the IDL says to do. bug 342490, r+sr=jst